<resources>
    <string name="app_name">SmartBells_</string>
    <string name="action_settings">Settings</string>

    <!-- SETTINGS -->

    <string name="routine">Design a Routine</string>
    <string name="design">Design</string>
    <string name="exercise">Add Exercise</string>
    <string name="user">User_Name</string>

    <!-- BEGIN WORKOUT TAB -->
    <string name="workout">Choose a Routine for Your Workout</string>
    <string name="my_routines">My Routines</string>
    <string name="public_routines">Public Routines</string>
    <string name="custom">Custom Session</string>
    <string name="wingit">Wing It!</string>

    <!-- LOGIN PAGE -->
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>

    <!-- SIGNUP -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_email">Username/Email</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="new_user">New User?</string>

    <string name="email">Email</string>
    <string name="create_account">Create my Account</string>
    <string name="new_signup"><a href="http://www.stackoverflow.com">Sign up now!</a></string>

</resources>
